<resources>
    <string name="app_name">SKB_Attendance</string>
    <string name="emailTitle">Почта</string>
    <string name="passwordTitle">Пароль</string>
    <string name="loginButtonTitle">Войти</string>
    <string name="forgot_password"><u>Восстановить пароль</u></string>
    <string name="loginHeader">Вход в аккаунт</string>
    <string name="registrationButtonTitle">Зарегистрироваться</string>
    <string name="incorrect_format">*Неверный формат</string>
    <string name="incorrect_format_pass">*Пароль должен быть больше 8 символов</string>
    <string name="registrationHeader">Создать аккаунт</string>
    <string name="nameTitle">Имя</string>
    <string name="surnameTitle">Фамилия</string>
    <string name="haveAcc_text">Уже есть аккаунт</string>

    <string name="recover_pass">Восстановить пароль</string>
    <string name="recover_description">Вам на почту был отправлен\nкод для восстановления</string>
    <string name="code_hint">Введите код</string>
    <string name="incorrect_code">*неверный код</string>
    <string name="new_code"><u>выслать новый код</u></string>
    <string name="time_to_code">повторный код через </string>
    <string name="confButton">Подтвердить</string>
    <string name="account">Аккаунт</string>
    <string name="news">Новости</string>
    <string name="scanText">Отсканируйте QR–код</string>
    <string name="scanner_error">"Этот QR-код не подходит,\nпожалуйста попробуйте другой"</string>
    <string name="default_name">Братусев Денис</string>
    <string name="story_title">История посещений :</string>
    <string name="default_date">10.11.2022</string>
    <string name="enter_new_password">введите новый пароль</string>
    <string name="password_repeat">Повторите пароль</string>
    <string name="diffPassword">Пароли отличаются</string>
    <string name="profile_title">Профиль</string>
    <string name="calendar">Календарь</string>
    <string name="remember_me">Запомнить меня</string>
    <string name="saveTitle">Сохранить</string>
    <string name="changePass">Изменить пароль</string>

    <string-array name="filterNames">
        <item>7 дней</item>
        <item>30 дней</item>
        <item>Текущий месяц</item>
    </string-array>
</resources>