<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="19dp"
        android:layout_marginRight="28dp"
        android:text="@string/recover_pass"
        android:textColor="@color/regist_text"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="31dp"
        android:layout_marginRight="28dp"
        android:text="@string/recover_description"
        android:textColor="@color/regist_text"
        android:textSize="20sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/codeInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="43dp"
        android:layout_marginRight="28dp"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/code_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="4"
            android:hint="@string/code_hint"
            android:textColor="@color/regist_text"
            android:textSize="20sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/recover_pas_des"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="5dp"
        android:text="@string/incorrect_code"
        android:textColor="@color/regist_errorTextColor"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/timerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="18dp"
        android:focusable="false"
        android:textColor="@color/regist_hint"
        android:textSize="20sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/forgot_confButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="28dp"
        android:layout_marginBottom="55dp"
        android:background="@drawable/login_button"
        android:minHeight="70dp"
        android:text="@string/confButton"
        android:textAllCaps="false"
        android:textColor="@color/login_button_text"
        android:textSize="30sp" />
</LinearLayout>