<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="230dp"
        android:layout_height="0dp"
        app:cardCornerRadius="130dp"
        android:layout_gravity="center">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"/>

    </androidx.cardview.widget.CardView>

    <ru.bratusevd.skb_attendance.services.avatarPicker.CustomAvatarPicker
        android:layout_marginTop="30dp"
        android:id="@+id/settingsActivity_userImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/settingsActivity_surnameLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/settingsActivity_surnameInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/surnameTitle"
            android:textColor="@color/regist_text"
            android:textColorHint="@color/regist_hint" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/settingsActivity_surnameDescText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:text="@string/incorrect_format"
        android:textColor="@color/regist_errorTextColor"
        android:textSize="11sp"
        android:visibility="invisible" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/settingsActivity_nameLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/settingsActivity_nameInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/nameTitle"
            android:textColor="@color/regist_text"
            android:textColorHint="@color/regist_hint" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/settingsActivity_nameDescText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:text="@string/incorrect_format"
        android:textColor="@color/regist_errorTextColor"
        android:textSize="11sp"
        android:visibility="invisible" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/settingsActivity_mailLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/settingsActivity_mailInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/emailTitle"
            android:textColor="@color/regist_text"
            android:textColorHint="@color/regist_hint" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/settingsActivity_mailDescText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:text="@string/incorrect_format"
        android:textColor="@color/regist_errorTextColor"
        android:textSize="11sp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/settingsActivity_changePass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/changePass"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:textColor="@color/forgot_text_blue"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/settingsActivity_saveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/login_button"
        android:text="@string/saveTitle"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textColor="@color/white"/>

</LinearLayout>